[FIX] viin_brand_common: badge was too large

--- a/viin_brand_common/static/src/webclient/webclient.scss
+++ b/viin_brand_common/static/src/webclient/webclient.scss
@@ -8,7 +8,8 @@
 }
 //== Badges
 .badge {
-	min-width: 3.6ch;
+	min-width: 3ch;
+	min-height: 3ch;
 	padding-top: 0.4em;
     &.text-bg-default, &.bg-light, &.text-bg-light, &.bg-default, &.text-primary{
         color: $o-enterprise-primary-color !important;
